# Fast_API_example

./: Docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2bef8ca433f2_add_user.py  625f5d9feab0_init.py  627d42d5797a_add_to_model_user_filed_confirmed.py
src/api/: auth.py  notes.py  tags.py  users.py
src/conf/: config.py
src/repository/: notes.py
src/services/: auth.py  users.py
